--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -23,5 +23,5 @@ jobs:
           environment_name: Reactdocker-env
           version_label: ${{ github.sha }}
           existing_bucket_name: elasticbeanstalk-eu-north-1-471468644321
-          region: us-east-1
+          region: eu-north-1
           deployment_package: deploy.zip
