--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,7 +20,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: react_docker
-          environment_name: Reactdocker-env
+          environment_name: Reactdocker-env-1
           version_label: ${{ github.sha }}
           existing_bucket_name: elasticbeanstalk-eu-north-1-471468644321
           region: eu-north-1
